shrink talent select container buttons to fix layout on mobile at 300px viewport width

--- a/src/style.css
+++ b/src/style.css
@@ -93,8 +93,8 @@ button {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
-	width: 2.6em;
-	height: 2.6em;
+	width: 2.46em;
+	height: 2.46em;
 	filter: drop-shadow(0 0 0.25em rgba(5%, 5%, 5%, 0.3))
 		drop-shadow(0 0 0.05em rgba(5%, 5%, 5%, 0.6));
 	margin-left: 0.2em;
